--- a/_config.yml
+++ b/_config.yml
@@ -93,10 +93,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Yongjin Shin"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "I introduce **myself**"
+  location         : "Seoul National University station"
   email            :
   links:
     - label: "Email"
